--- a/Cournot_Model.ipynb
+++ b/Cournot_Model.ipynb
@@ -1,21 +1,10 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "Xj2RnChZgW9J"
+      },
       "source": [
         "# **Story**\n",
         "In a rapidly growing city, five major firms are competing to meet the increasing demand for clean energy by producing and installing solar panels. The city government has incentivized solar energy, but there is a limit to how many solar panels can be installed due to space constraints. Each firm must decide how many solar panels to produce and install each year, knowing that the total number of panels produced by all firms will affect the market price.\n",
@@ -139,27 +128,29 @@
         "After several years of competition, the firms have reached a stable production level, where they have found a balance between producing enough panels to meet demand and avoiding overproduction that drives down prices. They have reached a Cournot-Nash equilibrium, where no firm can increase its profit by unilaterally changing its production level.\n",
         "\n",
         "This equilibrium shows how competition in a market with quantity-based strategies can stabilize over time, even when each firm is focused on maximizing its own profit.\n"
-      ],
-      "metadata": {
-        "id": "Xj2RnChZgW9J"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 52,
+      "metadata": {
+        "id": "cYoqANjnVAVD"
+      },
+      "outputs": [],
       "source": [
         "import random\n",
         "import numpy as np\n",
         "import pandas as pd\n",
         "import matplotlib.pyplot as plt\n"
-      ],
-      "metadata": {
-        "id": "cYoqANjnVAVD"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 53,
+      "metadata": {
+        "id": "97rDEKuqVR3p"
+      },
+      "outputs": [],
       "source": [
         "#predefined constants\n",
         "a = 500\n",
@@ -167,15 +158,15 @@
         "c = 10\n",
         "num_firms = 5\n",
         "num_rounds = 100"
-      ],
-      "metadata": {
-        "id": "97rDEKuqVR3p"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 54,
+      "metadata": {
+        "id": "MMyBlpJLYNZF"
+      },
+      "outputs": [],
       "source": [
         "# Initialize DataFrame to store results\n",
         "l1=[]\n",
@@ -190,29 +181,29 @@
         "columns = ['Round', 'Total Quantity', 'Price']\n",
         "columns=columns+l1+l2\n",
         "results = pd.DataFrame(columns=columns)"
-      ],
-      "metadata": {
-        "id": "MMyBlpJLYNZF"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 55,
+      "metadata": {
+        "id": "X7vyWyYiZw2u"
+      },
+      "outputs": [],
       "source": [
         "def best_response(firm_index, quantities):\n",
         "    \"Calculate the best response quantity for a given firm.\"\n",
         "    total_quantity_other_firms = sum(quantities) - quantities[firm_index]\n",
         "    return (a - c - b * total_quantity_other_firms) / (2 * b)\n"
-      ],
-      "metadata": {
-        "id": "X7vyWyYiZw2u"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 56,
+      "metadata": {
+        "id": "-VQdMaLgbEyk"
+      },
+      "outputs": [],
       "source": [
         "def is_nash_equilibrium(quantities):\n",
         "    \"Check if the current quantities are a Nash equilibrium.\"\n",
@@ -222,27 +213,27 @@
         "            return False\n",
         "    return True\n",
         "\n"
-      ],
-      "metadata": {
-        "id": "-VQdMaLgbEyk"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# List to store rounds with Nash equilibrium\n",
-        "nash_equilibrium_rounds = []\n"
-      ],
+      "execution_count": 57,
       "metadata": {
         "id": "wXvd6hVLbUyW"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "# List to store rounds with Nash equilibrium\n",
+        "nash_equilibrium_rounds = []\n"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 58,
+      "metadata": {
+        "id": "37EWnkEZcIBZ"
+      },
+      "outputs": [],
       "source": [
         "# Simulate the game for 100 rounds\n",
         "for round_num in range(1, num_rounds + 1):\n",
@@ -269,77 +260,66 @@
         "    # Append data to DataFrame\n",
         "    round_data = [round_num] + quantities + [total_quantity, price] + profits\n",
         "    results.loc[len(results)] = round_data\n"
-      ],
-      "metadata": {
-        "id": "37EWnkEZcIBZ"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# Display first few rows of the results\n",
-        "print(results.head())\n"
-      ],
-      "metadata": {
-        "id": "-RnDH3lccR-t",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "25232ba5-da10-4d83-c663-19104ad929ac"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "   Round  Total Quantity      Price  Firm 1 Quantity  Firm 2 Quantity  \\\n",
-            "0    1.0        7.653202  31.458317         9.329559        16.933799   \n",
-            "1    2.0       19.253145  23.281361        42.983881        47.079104   \n",
-            "2    3.0       30.990328  36.313081        27.158032        39.664938   \n",
-            "3    4.0       28.169213  47.290112        11.649506        33.524314   \n",
-            "4    5.0       18.134550   9.261060        36.777372        20.071858   \n",
-            "\n",
-            "   Firm 3 Quantity  Firm 4 Quantity  Firm 5 Quantity  Firm 1 Profit  \\\n",
-            "0        37.510828       102.885705       294.228591    2175.258737   \n",
-            "1        29.826908       162.424399       175.151201    3179.680097   \n",
-            "2        28.034805       162.161183       175.677634    5134.404139   \n",
-            "3        37.199451       157.832595       184.334810    4910.874320   \n",
-            "4        18.735968       102.980807       294.038386    5150.908198   \n",
-            "\n",
-            "   Firm 2 Profit  Firm 3 Profit  Firm 4 Profit  Firm 5 Profit  \n",
-            "0    8941.353187    2651.727348    4813.069806   10661.649750  \n",
-            "1    3844.944736    7098.839528    7775.170614    4925.949688  \n",
-            "2    6016.265415    4499.478418    6571.593024    4644.740115  \n",
-            "3    8244.312716    2030.914421    5844.454868    6485.159145  \n",
-            "4    2630.496395   10446.185239    5701.178270    5321.734113  \n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# Save results to CSV\n",
-        "results.to_csv('cournot_solar_panel_results.csv', index=False)\n"
-      ],
+      "execution_count": 59,
       "metadata": {
-        "id": "sHCg2qKEdOHG"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "-RnDH3lccR-t",
+        "outputId": "25232ba5-da10-4d83-c663-19104ad929ac"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "   Round  Total Quantity      Price  Firm 1 Quantity  Firm 2 Quantity  \\\n",
+            "0    1.0       27.062859  22.353208        23.114332        13.021690   \n",
+            "1    2.0        7.470014  42.889986         9.822131        39.763076   \n",
+            "2    3.0       46.448952  31.289058        47.767119        32.817800   \n",
+            "3    4.0       25.801805  48.365993        43.083147        27.130775   \n",
+            "4    5.0        3.209489  46.198157         6.819778        20.272380   \n",
+            "\n",
+            "   Firm 3 Quantity  Firm 4 Quantity  Firm 5 Quantity  Firm 1 Profit  \\\n",
+            "0        16.445690       101.997779       296.004442    7740.097762   \n",
+            "1        22.755933       122.701139       254.597722    1827.148289   \n",
+            "2        13.432646       171.755575       156.488851    6804.253642   \n",
+            "3        30.083648       174.465369       151.069262    3639.841647   \n",
+            "4        10.859995        87.359799       325.280401    1011.889119   \n",
+            "\n",
+            "   Firm 2 Profit  Firm 3 Profit  Firm 4 Profit  Firm 5 Profit  \n",
+            "0    6393.116816    6610.801716    3724.261144    4703.540437  \n",
+            "1   10490.792810    2402.470850    9725.957833    5566.049304  \n",
+            "2    4583.498125    6997.350330    4807.441761    1967.732890  \n",
+            "3    6822.954988    6077.707836    3827.318390    4243.878030  \n",
+            "4   14565.373495    2150.142227    6391.484104    3423.943657  \n"
+          ]
+        }
+      ],
+      "source": [
+        "# Display first few rows of the results\n",
+        "print(results.head())\n"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 60,
+      "metadata": {
+        "id": "sHCg2qKEdOHG"
+      },
+      "outputs": [],
       "source": [
-        "# Print Nash Equilibrium rounds\n",
-        "print(\"\\nRounds where Nash Equilibrium is achieved:\")\n",
-        "for round_info in nash_equilibrium_rounds:\n",
-        "    round_num, quantities, total_quantity, price, profits = round_info\n",
-        "    print(f\"Round {round_num}: Quantities: {quantities}, Total Quantity: {total_quantity}, Price: {price}, Profits: {profits}\")\n"
-      ],
+        "# Save results to CSV\n",
+        "results.to_csv('cournot_solar_panel_results.csv', index=False)\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 61,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -347,18 +327,47 @@
         "id": "8AWMoe0tddNK",
         "outputId": "8619570d-295a-4c79-f224-28c6f8e103af"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "\n",
             "Rounds where Nash Equilibrium is achieved:\n",
-            "Round 73: Quantities: [33.2277069856245, 40.77403107106494, 43.086863325800216, 36.058425355226255, 48.99848330220401], Total Quantity: 202.14551003991994, Price: 95.70897992016012, Profits: [2847.9128708238545, 3494.70061033389, 3692.9311036136937, 3090.5308547236796, 4199.610021466904]\n"
+            "Round 65: Quantities: [46.59151490726951, 36.355026959442384, 48.420253786861345, 40.49146490772161, 33.14091457843965], Total Quantity: 204.9991751397345, Price: 90.00164972053102, Profits: [3727.3980555602748, 2908.462132389772, 3873.7001828356965, 3239.383992218718, 2651.327839522369]\n"
           ]
         }
+      ],
+      "source": [
+        "# Print Nash Equilibrium rounds\n",
+        "print(\"\\nRounds where Nash Equilibrium is achieved:\")\n",
+        "for round_info in nash_equilibrium_rounds:\n",
+        "    round_num, quantities, total_quantity, price, profits = round_info\n",
+        "    print(f\"Round {round_num}: Quantities: {quantities}, Total Quantity: {total_quantity}, Price: {price}, Profits: {profits}\")\n"
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.12.3"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
